[package]
name = "blackhawkdown"
version = "0.1.0"
authors = ["Lander Brandt <landerbrandt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
structopt = "0.2"
byteorder = "1.3"
err-derive = "0.1"
bitflags = "1.1"
log = "0.4"
env_logger = "0.6"
indicatif = "0.11"
